--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-BR">
 
 <head>
+
   <meta charset="utf-8" />
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Exercicios</title>
